changed files location

--- a/html/services.html
+++ b/html/services.html
@@ -5,7 +5,7 @@
   <meta name="author" content="Achyut">
   <meta name="keywords" content="website design, website development">
   <title>Acme Web Design | Services</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 <header>
@@ -15,9 +15,9 @@
     </div>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="./about.html">About</a></li>
-        <li class="current"><a href="./services.html">Services</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li class="current"><a href="html/services.html">Services</a></li>
       </ul>
     </nav>
   </div>
