--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </div>
     <nav>
       <ul>
-        <li class="current"><a href="index.html">Home</a></li>
-        <li><a href="./about.html">About</a></li>
-        <li><a href="./services.html">Services</a></li>
+        <li class="current"><a href="index.html" target="_blank">Home</a></li>
+        <li><a href="html/about.html" target="_blank">About</a></li>
+        <li><a href="html/services.html" target="_blank">Services</a></li>
       </ul>
     </nav>
   </div>
